--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                     
                     // 创建名字粒子效果
                     const nameFontSize = window.innerWidth < 768 ? '3.5rem' : '5rem';
-                    createParticleText('寿星姓名', nameParticleText, nameFontSize, 'name-particle');
+                    createParticleText('赖德棋', nameParticleText, nameFontSize, 'name-particle');
                     
                     // 创建生日快乐粒子效果
                     const birthdayFontSize = window.innerWidth < 768 ? '4.5rem' : '6rem';
