--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>幸运抽奖与生日祝福</title>
+    <title>给乖仔的神秘礼物</title>
     <style>
         * {
             margin: 0;
