--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         </div>
         
         <div class="copyright">
-            © 2025 Rirililas | 版权所有
+            © 2025 Rirililas | 版权所有 <a href="https://github.com/realjackyli/bdaygift">本Git项目</a>
         </div>
     </div>
 
